--- a/README
+++ b/README
@@ -46,8 +46,10 @@ How to report bugs
 
 Bugs should be reported to the GNOME bug tracking system:
 
-  http://bugzilla.gnome.org/enter_bug.cgi?product=atk
+  https://gitlab.gnome.org/GNOME/atk/-/issues/
 
 You will need to create an account for yourself.
 
-You can also mail the mailing list gnome-accessibility-devel@gnome.org
+You can also discuss in the forum:
+
+  https://discourse.gnome.org/c/community/accessibility/340
